# mesh-llm

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  ISSUE_184_BODY.md  Justfile  LLAMA_CPP_SHA  PLUGINS.md  Package.swift  README.md  RELEASE.md  install.sh
.github/workflows/: ci.yml  compat-matrix.yml  debug-slim-cache.yml  docker-precheck.yml  embedded-client-lint.yml  gpu-warm-cache-job.yml  llama-cache-keys.yml  llama-upstream-canary.yml  release.yml  reset-caches.yml  smoke.yml
bindings/kotlin/: build.gradle.kts  consumer-proguard-rules.pro  settings.gradle.kts
bindings/swift/: Package.swift  PrivacyInfo-README.md  README.md
docker/: Dockerfile.cpu  Dockerfile.cuda  Dockerfile.rocm  Dockerfile.vulkan
docs/: AGENTS.md  BENCHMARKS.md  CI_GUIDANCE.md  CLI.md  USAGE.md  index.html
evals/: test_injection_framing.py  virtual_llm_eval.py
fly/: Dockerfile
fly/api/: fly.toml
mesh-api/: Cargo.toml
mesh-api-ffi/: Cargo.toml
mesh-client/: Cargo.toml
mesh-client-core/: Cargo.toml
mesh-ffi/: Cargo.toml
mesh-ffi/src/: lib.rs  mesh_ffi.udl
mesh-ffi/tests/: error_mapping.rs  smoke.rs
mesh-llm/: Cargo.toml  README.md  TODO.md
scripts/: benchmark-prefix-affinity.sh  build-linux-rocm.sh  build-linux.sh  build-mac.sh  build-release.sh  build-windows.ps1  ci-compat-smoke.sh  ci-kotlin-sdk-smoke.sh  ci-native-sdk-smoke.sh  ci-sdk-fixture.sh  ci-smoke-test.ps1  ci-smoke-test.sh  ci-swift-sdk-smoke.sh  install-windows-sdk.ps1  moe-live-smoke.sh  package-release.ps1  package-release.sh  prepare-llama.sh  release-version.sh
sdk/: README.md
(+207 files in other folders)
