[package]
name = "mesh-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
host = ["mesh-host-core"]

[dependencies]
mesh-client-core = { path = "../mesh-client-core" }
mesh-host-core = { path = "../mesh-host-core", optional = true }
uniffi = "=0.31.0"
thiserror = "2"
pollster = "0.3"

[build-dependencies]
uniffi = { version = "=0.31.0", features = ["build"] }
